--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "nodemon": "^3.1.11",
     "user-agents": "^1.0.1190"
   },
   "devDependencies": {
